# EduMind

./: .dockerignore  .env  .flake8  .gitignore  .gitignore.new  .pre-commit-config.yaml  AGENTS.md  BACKEND_ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMMIT_LOG.md  Dockerfile  HTTPS_UPGRADE_ARCHITECTURE.md  KEYWORD_SEARCH_DELIVERY_SUMMARY.md  MIGRATION_GUIDE.md  PROJECT_AGENT_ORCHESTRATION_PROMPT.md  PROJECT_MOBILE_IMPLEMENTATION_PROMPT.md  README.en.md  README.md  README_test.md  SEARCH_DIAGNOSIS_INDEX.md  SEARCH_DIAGNOSTIC_SUMMARY.md  SEARCH_FIX_ACTION_PLAN.md  SEARCH_SYSTEM_QUICK_REFERENCE.md  SENTRYSEARCH_INTEGRATION_PROMPT.md  dev_start.py  docker-compose.yml  download.py  download_whisper.py  index.md  migration_reason.md  nginx.conf  pyproject.toml  pytest.ini  rag_system.py  railway.json  requirements.txt  server_deployment_log.md  skills-lock.json  start-web.bat  (+3 more)
.xcode-derived/: info.plist
.xcode-derived-nosign/: info.plist
IVS/: DEPLOY.md  Process_video.py  chat_system.py  deploy.sh  download_video.py  learning_path.py  main.py  note_system.py  question_generator.py  rag_system.py  requirements.txt  video_tools.py  youtube.cookies
IVS-Flask-Vue/: README.md
android-app/: README.md  gradlew.bat  local.properties  settings.gradle.kts
backend/: .env  .env.production  CLAUDE.md  Dockerfile  README.md  add_test_subtitles.py  celery_app.py  check_db.py  check_subtitle_format.py  check_subtitles.py  check_video.py  config.py  create_tables.py  force_create_db.py  gunicorn.conf.py  import_subtitles.py  init_db.py  init_mysql_db.py  recreate_extended_users_table.py  recreate_simple_users_table.py  recreate_users_table.py  requirements.txt  requirements_auth.txt  run.py  run_migration.py  test_celery_tasks.py  test_mps_whisper.py  test_neo4j.py  update_tables.py
backend_fastapi/: .env  .env.example  .env.production  CLAUDE.md  Dockerfile  README.md  README_RUN.md  SEMANTIC_SEARCH_DEPLOYMENT.md  pytest.ini  requirements.txt  (+2 more)
(+911 files in other folders)
