[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "EDUMIND"
version = "0.1.0"
description = "教育思维"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web 框架
    "flask>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    # 数据库
    "sqlalchemy>=2.0.0",
    "neo4j>=5.0.0",
    # 异步任务
    "celery>=5.0.0",
    "redis>=4.0.0",
    # AI/ML
    "openai-whisper>=20230314",
    "torch>=2.0.0",
    # 其他
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "isort>=5.12.0",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.report]
fail_under = 25

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/build/
^/uploads/
^/logs/
^/migrations/
'''

[tool.isort]
profile = "black"
line_length = 120
force_single_line = true

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "W0621",  # redefined-outer-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0718",  # broad-exception-caught
    "E1101",  # no-member (for dynamic attributes)
]

[tool.pylint.format]
max-line-length = 120

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = true
check_untyped_defs = true
ignore_missing_imports = true
